--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                   <div class="tm-underline-inner"></div>
                 </div>
                 <p class="mb-5">
-                  <b class="cntr"><strong>This persentation is created by Group A</strong></b>
+                  <b class="cntr"><strong>This presentation is created by Group A</strong></b>
                 </p>
             </div>
         </div>
